package app.DTO;

import java.util.List;

public class CreditsDTO {

    private List<CastDTO> cast;

}
