package app.DTO;

public class GenreDTO {

    private int id;
    private String name;
}
